@@ -1,15 +1,29 @@
+/*
+ * Copyright 2000-2025 Vaadin Ltd.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
 package com.vaadin.hilla.endpoint;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.Test;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class EndpointGenerationIT {
-    Path frontendDir = Paths.get("frontend", "generated");
+    Path frontendDir = Path.of("src/main/frontend/generated");
 
     /**
      * Endpoint in com.example.application should be generated
@@ -24,12 +38,13 @@ public class EndpointGenerationIT {
     }
 
     /**
-     * Endpoint not in configured packages should not be generated
+     * As we are now using the lookup-based endpoint finder, all the endpoints
+     * are generated, even those that will not be available as Spring beans.
      */
     @Test
-    public void shouldNotGenerateExternalEndpoint() {
-        assertFalse(Files.exists(frontendDir.resolve("ExternalEndpoint.ts")));
-        assertFalse(Files
+    public void shouldGenerateExternalEndpoint() {
+        assertTrue(Files.exists(frontendDir.resolve("ExternalEndpoint.ts")));
+        assertTrue(Files
                 .exists(frontendDir.resolve("com/external/ExternalEntity.ts")));
     }
 
